force-app/main/default/objects/iContactforSF__iContact_Global_Statistic__c.object
<CustomObject>
    <description>Tracking (hidden) object to track system-wide averages for campaign open / click / bounce rates, etc. Used to generate the bars on the bullet charts on the message send detail page.</description>
    <fields>
        <fullName>iContactforSF__Average_Bounce_Rate__c</fullName>
        <description>Tracks the average bounce rate across all campaigns as a percentage.</description>
        <inlineHelpText>Tracks the average bounce rate across all campaigns as a percentage.</inlineHelpText>
        <label>Average Bounce Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Click_Rate__c</fullName>
        <description>Tracks the average click rate across all campaigns as a percentage.</description>
        <inlineHelpText>Tracks the average click rate across all campaigns as a percentage.</inlineHelpText>
        <label>Average Click Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Complaint_Rate__c</fullName>
        <description>Tracks the average complaint rate across all campaigns as a percentage.</description>
        <inlineHelpText>Tracks the average complaint rate across all campaigns as a percentage.</inlineHelpText>
        <label>Average Complaint Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Forward_Rate__c</fullName>
        <description>Average forward rate.</description>
        <inlineHelpText>Average forward rate.</inlineHelpText>
        <label>Average Forward Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Open_Rate__c</fullName>
        <description>Tracks the average open rate across all campaigns as a percentage.</description>
        <inlineHelpText>Tracks the average open rate across all campaigns as a percentage.</inlineHelpText>
        <label>Average Open Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Average_Unsubscribe_Rate__c</fullName>
        <description>Tracks the average unsubscribe rate across all campaigns as a percentage.</description>
        <inlineHelpText>Tracks the average unsubscribe rate across all campaigns as a percentage.</inlineHelpText>
        <label>Average Unsubscribe Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate_Stdev__c</fullName>
        <description>Standard deviation of average bounce rate.</description>
        <inlineHelpText>Standard deviation of average bounce rate.</inlineHelpText>
        <label>Bounce Rate Stdev</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate_Stdev__c</fullName>
        <description>Standard deviation of average click rate.</description>
        <inlineHelpText>Standard deviation of average click rate.</inlineHelpText>
        <label>Click Rate Stdev</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Complaint_Rate_Stdev__c</fullName>
        <description>Standard deviation of average complaint rate.</description>
        <inlineHelpText>Standard deviation of average complaint rate.</inlineHelpText>
        <label>Complaint Rate Stdev</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Counted_Messages__c</fullName>
        <description>Number of messages that were analyzed to get this global statistic. Only messages sent over 24 hours ago, and messages with iContact statistics, are analyzed.</description>
        <inlineHelpText>Number of messages that were analyzed to get this global statistic. Only messages sent over 24 hours ago, and messages with iContact statistics, are analyzed.</inlineHelpText>
        <label>Counted Messages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Forward_Rate_Stdev__c</fullName>
        <description>Standard deviation for average forward rate.</description>
        <inlineHelpText>Standard deviation for average forward rate.</inlineHelpText>
        <label>Forward Rate Stdev</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate_Stdev__c</fullName>
        <description>Standard deviation of the average open rate.</description>
        <inlineHelpText>Standard deviation of the average open rate.</inlineHelpText>
        <label>Open Rate Stdev</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribe_Rate_Stdev__c</fullName>
        <description>Standard deviation of average unsubscribe rate.</description>
        <inlineHelpText>Standard deviation of average unsubscribe rate.</inlineHelpText>
        <label>Unsubscribe Rate Stdev</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Wide_Average_Bounce_Rate__c</fullName>
        <description>Tracks the average bounce rate across all campaigns as a percentage</description>
        <inlineHelpText>Tracks the average bounce rate across all campaigns as a percentage</inlineHelpText>
        <label>Average Bounce Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Wide_Average_Click_Rate__c</fullName>
        <description>Tracks the average click rate across all campaigns as a percentage.</description>
        <inlineHelpText>Tracks the average click rate across all campaigns as a percentage.</inlineHelpText>
        <label>Average Click Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Wide_Average_Complaint_Rate__c</fullName>
        <description>Tracks the average complaint rate across all campaigns as a percentage.</description>
        <inlineHelpText>Tracks the average complaint rate across all campaigns as a percentage.</inlineHelpText>
        <label>Average Complaint Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Wide_Average_Forward_Rate__c</fullName>
        <description>Average forward rate.</description>
        <inlineHelpText>Average forward rate.</inlineHelpText>
        <label>Average Forward Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Wide_Average_Open_Rate__c</fullName>
        <description>Tracks the average open rate across all campaigns as a percentage.</description>
        <inlineHelpText>Tracks the average open rate across all campaigns as a percentage.</inlineHelpText>
        <label>Average Open Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Wide_Average_Unsubscribe_Rate__c</fullName>
        <description>Tracks the average unsubscribe rate across all campaigns as a percentage.</description>
        <inlineHelpText>Tracks the average unsubscribe rate across all campaigns as a percentage.</inlineHelpText>
        <label>Average Unsubscribe Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Wide_Bounce_Rate_Stdev__c</fullName>
        <description>Standard deviation of average bounce rate.</description>
        <inlineHelpText>Standard deviation of average bounce rate.</inlineHelpText>
        <label>Bounce Rate Stdev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Wide_Click_Rate_Stdev__c</fullName>
        <description>Standard deviation of average click rate.</description>
        <inlineHelpText>Standard deviation of average click rate.</inlineHelpText>
        <label>Click Rate Stdev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Wide_Complaint_Rate_Stdev__c</fullName>
        <description>Standard deviation of average complaint rate.</description>
        <inlineHelpText>Standard deviation of average complaint rate.</inlineHelpText>
        <label>Complaint Rate Stdev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Wide_Forward_Rate_Stdev__c</fullName>
        <description>Standard deviation for average forward rate.</description>
        <inlineHelpText>Standard deviation for average forward rate.</inlineHelpText>
        <label>Forward Rate Stdev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Wide_Open_Rate_Stdev__c</fullName>
        <description>Standard deviation of the average open rate.</description>
        <inlineHelpText>Standard deviation of the average open rate.</inlineHelpText>
        <label>Open Rate Stdev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Wide_Unsubscribe_Rate_Stdev__c</fullName>
        <description>Standard deviation of average unsubscribe rate.</description>
        <inlineHelpText>Standard deviation of average unsubscribe rate.</inlineHelpText>
        <label>Unsubscribe Rate Stdev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>iContact Global Statistic</label>
    <nameField>
        <displayFormat>IGS-{0}</displayFormat>
        <label>iContact Global Statistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iContact Global Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>